case for using autospec to create functions with attributes that don't exist
on the original?

`mocksignature`, plus the `call_args_list` and `method_calls` attributes of
`Mock` could all be deprecated.


CHANGELOG
=========


2012/XX/XX Version 0.8.0
------------------------

The only change since 0.8rc2 is:

* Improved repr of `sentinel` objects

Full List of changes since 0.7:

mock 0.8.0 is the last version that will support Python 2.4.

* Addition of `mock_calls` list for *all* calls (including magic methods and
  chained calls)
* `patch` and `patch.object` now create a `MagicMock` instead of a `Mock` by
  default
* The patchers (`patch`, `patch.object` and `patch.dict`), plus `Mock` and
  `MagicMock`, take arbitrary keyword arguments for configuration
* New mock method `configure_mock` for setting attributes and return values /
  side effects on the mock and its attributes
* New mock assert methods `assert_any_call` and `assert_has_calls`
* Implemented auto-speccing (recursive, lazy speccing of mocks with mocked
  signatures for functions/methods), as the `autospec` argument to `patch`
* Added the `create_autospec` function for manually creating 'auto-specced'
  mocks
* `patch.multiple` for doing multiple patches in a single call, using keyword
  arguments
* Setting `side_effect` to an iterable will cause calls to the mock to return
  the next value from the iterable
* New `new_callable` argument to `patch` and `patch.object` allowing you to
  pass in a class or callable object (instead of `MagicMock`) that will be
  called to replace the object being patched
* Addition of `NonCallableMock` and `NonCallableMagicMock`, mocks without a
  `__call__` method
* Addition of `mock_add_spec` method for adding (or changing) a spec on an
  existing mock
* Protocol methods on `MagicMock` are magic mocks, and are created lazily on
  first lookup. This means the result of calling a protocol method is a
  MagicMock instead of a Mock as it was previously