@@ -90,6 +90,7 @@ CHANGELOG
 The only change since 0.8rc2 is:
 
 * Improved repr of `sentinel` objects
+* `ANY` can be used for comparisons against `call` objects
 
 Full List of changes since 0.7:
 
